--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ dmypy.json
 /samples/ConsoleSample/ConsoleSample-dev.py
 /samples/KleinWebAppSample/credentials-dev.json
 /samples/jupyter/credentials-dev.json
+/samples/ConsoleSample/config-trade.json
+/samples/ConsoleSample/config-quote.json
